--- a/workspace/style.css
+++ b/workspace/style.css
@@ -11,6 +11,50 @@
     z-index: -1;
 }
 
+.progressContainer {
+    position: fixed;
+    top: 0;
+    right: 0;
+    left: 0;
+    width: 100%;
+    background-color: transparent;
+    height: 5px;
+    display: block;
+    z-index: 1;
+}
+
+#progressBar {
+    background-color: #b28dff;
+    width: 0%;
+    display: block;
+    height: inherit;
+}
+
+.top-tab {
+    position: fixed;
+    font-size: 1.5rem;
+    font-family: 'Exo 2';
+    top: 15px;
+    opacity: 0;
+}
+
+@media only screen and (max-width: 750px) {
+    .top-tab {
+        display: none;
+    }
+}
+
+
+#middle-tab {
+    left: 50%;
+    transform: translate(-50%, 0%);
+}
+
+#right-tab {
+    right: 10%;
+}
+
+
 h1 {
     color: #fff;
     font-size: 2rem;
@@ -24,6 +68,10 @@ h1 {
     font-size: 2rem;
     border-color: #fff;
     border-style: solid;
+}
+
+.half {
+    height: 50vh;
 }
 
 #scrollProgress {
@@ -159,6 +207,14 @@ h1 {
     text-align: left;
 }
 
+#leftslide {
+    width: 80%;
+    left: -40%;
+    top: 10%;
+    background-color: rgba(35, 35, 35, 0);
+    text-align: left;
+}
+
 .heading {
     font-size: 3vw;
     font-weight: 600;
@@ -199,11 +255,22 @@ a:hover {
     left: 0%;
 }
 
+.left {
+    position: relative;
+    left: 50%;
+}
+
 @media only screen and (max-width: 1000px) {
     #rightslide {
         width: 110%;
         right: -55%;
     }
+
+    #leftslide {
+        width: 110%;
+        right: -55%;
+    }
+
     .heading {
         font-size: 4vw;
     }
@@ -220,6 +287,10 @@ a:hover {
         width: 200%;
         right: -100%;
     }
+    #leftslide {
+        width: 200%;
+        right: -100%;
+    }
     .heading {
         font-size: 8vw;
     }
@@ -229,4 +300,11 @@ a:hover {
     .text {
         font-size: 3vw;
     }
+}
+
+.portfolio-image {
+    width: 30%;
+}
+.portfolio-image:hover {
+    transform: scale(1.05);
 }
